--- a/package.json
+++ b/package.json
@@ -9,14 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/form-control": "^2.2.0",
     "@chakra-ui/react": "^3.2.3",
+    "@chakra-ui/system": "^2.6.2",
     "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "formik": "^2.4.6",
     "framer-motion": "^11.15.0",
     "next": "15.1.2",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.4.0"
+    "react-icons": "^5.4.0",
+    "react-toastify": "^11.0.2",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
