--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@chakra-ui/form-control": "^2.2.0",
+    "@chakra-ui/next-js": "^2.4.2",
     "@chakra-ui/react": "^3.2.3",
     "@chakra-ui/system": "^2.6.2",
     "@emotion/react": "^11.14.0",
