--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.735.0",
     "@chakra-ui/form-control": "^2.2.0",
     "@chakra-ui/next-js": "^2.4.2",
     "@chakra-ui/react": "^3.2.3",
@@ -17,6 +18,7 @@
     "@emotion/styled": "^11.14.0",
     "formik": "^2.4.6",
     "framer-motion": "^11.15.0",
+    "jwt-decode": "^4.0.0",
     "next": "15.1.2",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
