--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.4.0",
+    "react-icons": "^5.5.0",
+    "react-spinners": "^0.15.0",
     "react-toastify": "^11.0.2",
     "yup": "^1.6.1"
   },
