--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "formik": "^2.4.6",
     "framer-motion": "^11.15.0",
     "jwt-decode": "^4.0.0",
-    "next": "15.1.2",
+    "next": "^15.3.1",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
